# PurePursuitSimulation

./: .gitignore  CMakeLists.txt  README.md  render.py  test.csv
include/: lookAhead.h  mathLib.h  pathUpdate.h  point.h  pointCreation.h  rateLimiter.h  robot.h  simulation.h  stringOperations.h
src/: main.cpp  mathLib.cpp  pathUpdate.cpp  pointCreation.cpp  simulation.cpp
